k8s/B_pod deployment service/03_service01_pod01.yml
apiVersion: v1
kind: Pod
metadata:
  name: http-nginx-pod01
  labels:
    app: http-nginx
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
