k8s/B_pod deployment service/03_service01_pod02.yml
apiVersion: v1
kind: Pod
metadata:
  name: http-nginx-pod02
  labels:
    app: http-nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
