k8s/B_pod deployment service/03_service03_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-nginx
  template:
    metadata:
      labels:
        app: http-nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.14.2
          ports:
            - containerPort: 80
