k8s/B_pod deployment service/03_service02_nodeport.yml
apiVersion: v1
kind: Service
metadata:
 name: http-nginx-svc-nodeport
spec:
 type: NodePort
 ports:
 - port: 8080
   targetPort: 80
   nodePort: 30080
 selector:
   app: http-nginx
