k8s/B_pod deployment service/03_service03_loadbalancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-nginx
  template:
    metadata:
      labels:
        app: http-nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.17
          ports:
            - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
 name: http-nginx-svc-lb
spec:
 type: LoadBalancer
 #loadBalancerIP: 192.168.219.
 ports:
 - port: 8080
   targetPort: 80
 selector:
   app: http-nginx
