k8s/B_pod deployment service/04_ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1-websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv1
  template:
    metadata:
      labels:
        app: websrv1
    spec:
      containers:
      - name: pod-web1
        image: nginx
        command: ['sh', '-c']
        args: ['echo "websrv1" > /usr/share/nginx/html/index.html && exec nginx -g "daemon off;"']
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc1-web
spec:
  ports:
    - name: web-port
      port: 80
      targetPort: 80
  selector:
    app: websrv1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2-websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv2
  template:
    metadata:
      labels:
        app: websrv2
    spec:
      containers:
      - name: pod-web2
        image: nginx
        command: ['sh', '-c']
        args: ['echo "websrv2" > /usr/share/nginx/html/index.html && exec nginx -g "daemon off;"']
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc2-web
spec:
  ports:
    - name: web-port
      port: 80
      targetPort: 80
  selector:
    app: websrv2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy3-websrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websrv3
  template:
    metadata:
      labels:
        app: websrv3
    spec:
      containers:
      - name: pod-web3
        image: nginx
        command: ['sh', '-c']
        args: ['echo "websrv3" > /usr/share/nginx/html/index.html && exec nginx -g "daemon off;"']
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc3-web
spec:
  ports:
    - name: web-port
      port: 80
      targetPort: 80
  selector:
    app: websrv3
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-domain-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc1-web
            port:
              number: 80
  - host: web2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc2-web
            port:
              number: 80
  - host: web3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc3-web
            port:
              number: 80
